--- a/public/scss/snap-gallery.css
+++ b/public/scss/snap-gallery.css
@@ -23,15 +23,19 @@
       object-fit: cover; }
 
 .snap-gallery {
+  width: 100%;
   flex-wrap: wrap;
   gap: var(--gap); }
 
 .snap-slideshow {
   width: var(--slideshow-width);
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  max-width: var(--slideshow-max-width); }
   .snap-slideshow .snap-image:not(:first-child) {
     display: none; }
+  .snap-slideshow .snap-image img {
+    object-fit: var(--object-fit-style); }
 
 .snap-slideshow .snap-image,
 .snap-lightbox .snap-lightbox-inner {
