--- a/themes/hugo-snap-gallery/assets/scss/snap-gallery.scss
+++ b/themes/hugo-snap-gallery/assets/scss/snap-gallery.scss
@@ -30,18 +30,26 @@ $gap: var(--gap);
 }
 
 .snap-gallery {
+  width: 100%;
   flex-wrap: wrap;
   gap: $gap;
+  // max-width: var(--max-width);
 }
 
 .snap-slideshow {
   width: var(--slideshow-width);
   margin-left: auto;
   margin-right: auto;
+  max-width: var(--slideshow-max-width);
 
   // Hide all contained images except the first
   .snap-image:not(:first-child) {
     display: none;
+  }
+  .snap-image {
+    img {
+      object-fit: var(--object-fit-style);
+    }
   }
 }
 
